[package]
name = "frontend"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["python"]
python = ["dep:script"]
testing = []

[dependencies]
api.workspace = true
arc-swap = "1.0"
arrow-flight.workspace = true
async-compat = "0.2"
async-stream.workspace = true
async-trait = "0.1"
auth.workspace = true
catalog.workspace = true
chrono.workspace = true
client.workspace = true
common-base.workspace = true
common-catalog.workspace = true
common-config.workspace = true
common-datasource.workspace = true
common-error.workspace = true
common-function.workspace = true
common-grpc-expr.workspace = true
common-grpc.workspace = true
common-macro.workspace = true
common-meta.workspace = true
common-procedure.workspace = true
common-query.workspace = true
common-recordbatch.workspace = true
common-runtime.workspace = true
common-telemetry.workspace = true
common-time.workspace = true
datafusion-common.workspace = true
datafusion-expr.workspace = true
datafusion.workspace = true
datanode.workspace = true
datatypes.workspace = true
file-engine.workspace = true
futures = "0.3"
futures-util.workspace = true
humantime-serde.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log-store.workspace = true
meta-client.workspace = true
moka = { workspace = true, features = ["future"] }
object-store.workspace = true
openmetrics-parser = "0.4"
opentelemetry-proto.workspace = true
operator.workspace = true
partition.workspace = true
prometheus.workspace = true
prost.workspace = true
query.workspace = true
raft-engine.workspace = true
regex.workspace = true
script = { workspace = true, features = ["python"], optional = true }
serde.workspace = true
serde_json.workspace = true
servers.workspace = true
session.workspace = true
snafu.workspace = true
sql.workspace = true
sqlparser.workspace = true
store-api.workspace = true
substrait.workspace = true
table.workspace = true
tokio.workspace = true
toml.workspace = true
tonic.workspace = true

[dev-dependencies]
catalog.workspace = true
common-test-util.workspace = true
datanode.workspace = true
futures = "0.3"
meta-srv = { workspace = true, features = ["mock"] }
strfmt = "0.2"
tower = "0.4"
uuid.workspace = true
