[package]
name = "log-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
protobuf-build = { version = "0.15", default-features = false, features = [
    "protobuf-codec",
] }

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
byteorder = "1.4"
bytes.workspace = true
common-base.workspace = true
common-config.workspace = true
common-error.workspace = true
common-macro.workspace = true
common-meta.workspace = true
common-runtime.workspace = true
common-telemetry.workspace = true
dashmap.workspace = true
futures-util.workspace = true
futures.workspace = true
protobuf = { version = "2", features = ["bytes"] }
raft-engine.workspace = true
rskafka.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
store-api.workspace = true
tokio-util.workspace = true
tokio.workspace = true

[dev-dependencies]
common-meta = { workspace = true, features = ["testing"] }
common-test-util.workspace = true
rand.workspace = true
