[package]
name = "meta-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
api.workspace = true
async-trait = "0.1"
chrono.workspace = true
common-error.workspace = true
common-grpc.workspace = true
common-macro.workspace = true
common-meta.workspace = true
common-telemetry.workspace = true
etcd-client.workspace = true
humantime-serde.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
table.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
tokio.workspace = true
tonic.workspace = true

[dev-dependencies]
datatypes.workspace = true
futures = "0.3"
meta-srv = { workspace = true, features = ["mock"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
