[package]
name = "meta-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
api.workspace = true
async-trait = "0.1"
common-error.workspace = true
common-grpc.workspace = true
common-macro.workspace = true
common-meta.workspace = true
common-telemetry.workspace = true
humantime-serde.workspace = true
rand.workspace = true
serde.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
tonic.workspace = true

[dev-dependencies]
datatypes.workspace = true
futures = "0.3"
meta-srv = { workspace = true, features = ["mock"] }
tower.workspace = true
tracing = "0.1"
tracing-subscriber.workspace = true
