[package]
name = "meta-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
api.workspace = true
async-trait.workspace = true
common-base.workspace = true
common-error.workspace = true
common-grpc.workspace = true
common-macro.workspace = true
common-meta.workspace = true
common-telemetry.workspace = true
futures.workspace = true
futures-util.workspace = true
humantime-serde.workspace = true
rand.workspace = true
serde.workspace = true
snafu.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
tonic.workspace = true

[dev-dependencies]
datatypes.workspace = true
futures.workspace = true
meta-srv = { workspace = true, features = ["mock"] }
session.workspace = true
tower.workspace = true
tracing = "0.1"
tracing-subscriber.workspace = true
