[package]
name = "meta-srv"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
mock = []

[dependencies]
anymap = "1.0.0-beta.2"
api = { path = "../api" }
async-stream.workspace = true
async-trait = "0.1"
catalog = { path = "../catalog" }
client = { path = "../client" }
common-base = { path = "../common/base" }
common-catalog = { path = "../common/catalog" }
common-error = { path = "../common/error" }
common-grpc = { path = "../common/grpc" }
common-meta = { path = "../common/meta" }
common-procedure = { path = "../common/procedure" }
common-runtime = { path = "../common/runtime" }
common-telemetry = { path = "../common/telemetry" }
common-time = { path = "../common/time" }
dashmap = "5.4"
derive_builder = "0.12"
etcd-client.workspace = true
futures.workspace = true
h2 = "0.3"
http-body = "0.4"
lazy_static = "1.4"
metrics.workspace = true
once_cell = "1.17"
parking_lot = "0.12"
prost.workspace = true
rand.workspace = true
regex = "1.6"
serde = "1.0"
serde_json = "1.0"
snafu.workspace = true
store-api = { path = "../store-api" }
table = { path = "../table" }
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["net"] }
toml = "0.5"
tonic.workspace = true
tower = "0.4"
typetag = "0.2"
url = "2.3"
servers = { path = "../servers" }

[dev-dependencies]
chrono.workspace = true
common-procedure-test = { path = "../common/procedure-test" }
datatypes = { path = "../datatypes" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
