[package]
name = "metric-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
api.workspace = true
aquamarine.workspace = true
async-stream.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
fxhash = "0.2"
common-base.workspace = true
common-error.workspace = true
common-macro.workspace = true
common-query.workspace = true
common-recordbatch.workspace = true
common-runtime.workspace = true
common-telemetry.workspace = true
common-time.workspace = true
datafusion.workspace = true
datatypes.workspace = true
futures-util.workspace = true
humantime-serde.workspace = true
itertools.workspace = true
lazy_static = "1.4"
mito-codec.workspace = true
mito2.workspace = true
moka.workspace = true
object-store.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
snafu.workspace = true
store-api.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
common-meta = { workspace = true, features = ["testing"] }
common-test-util.workspace = true
mito2 = { workspace = true, features = ["test"] }
common-wal = { workspace = true }

[package.metadata.cargo-udeps.ignore]
normal = ["aquamarine"]
