[package]
name = "mito-codec"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
testing = []

[dependencies]
api.workspace = true
bytes.workspace = true
common-base.workspace = true
common-decimal.workspace = true
common-error.workspace = true
common-macro.workspace = true
common-recordbatch.workspace = true
common-telemetry.workspace = true
common-time.workspace = true
datatypes.workspace = true
memcomparable = "0.2"
paste.workspace = true
serde.workspace = true
snafu.workspace = true
store-api.workspace = true

[dev-dependencies]
criterion = "0.7"
datafusion-common.workspace = true
datafusion-expr.workspace = true

[[bench]]
name = "bench_sparse_encoding"
harness = false
required-features = ["testing"]
