[package]
name = "mito"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test = ["common-test-util"]

[dependencies]
anymap = "1.0.0-beta.2"
arc-swap = "1.0"
async-stream.workspace = true
async-trait = "0.1"
chrono.workspace = true
common-catalog = { workspace = true }
common-datasource = { workspace = true }
common-error = { workspace = true }
common-procedure = { workspace = true }
common-query = { workspace = true }
common-recordbatch = { workspace = true }
common-telemetry = { workspace = true }
common-test-util = { workspace = true, optional = true }
common-time = { workspace = true }
dashmap = "5.4"
datafusion-common.workspace = true
datafusion.workspace = true
datatypes = { workspace = true }
futures.workspace = true
key-lock = "0.1"
log-store = { workspace = true }
metrics.workspace = true
object-store = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu.workspace = true
storage = { workspace = true }
store-api = { workspace = true }
table = { workspace = true }
tokio.workspace = true

[dev-dependencies]
common-procedure-test = { workspace = true }
common-test-util = { workspace = true }
